--- a/about/index.html
+++ b/about/index.html
@@ -6,13 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="stylesheet" href="css/main.css" />
     <title>InspireStep - Coming soon</title>
-
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
@@ -26,13 +25,6 @@
         <li>Post a Job (Employer)</li>
       </ul>
     </nav>
-
-    <main>
-      <p>This is a long paragraph. We want you to understand this.</p>
-    </main>
-
-    <footer>
-      <p><a href="about/index.html">About us</a></p>
-    </footer>
+    <p>About us page</p>
   </body>
 </html>
