Keeping up with Nav

--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
           Get your queries solved:
           <a href="tel:+91-998-167-7217">+91-998-167-7217</a>
         </li>
-        <li>Grab an opportunity</li>
-        <li>Post a Job (Employer)</li>
+        <li><a href="#">Grab an opportunity</a></li>
+        <li><a href="#">Post a Job (Employer)</a></li>
       </ul>
     </nav>
 
-    <main>
-      <p>This is a long paragraph. We want you to understand this.</p>
-    </main>
+    <main>content</main>
 
     <footer>
-      <p><a href="about/index.html">About us</a></p>
+      <a href="about/index.html">About us</a>
     </footer>
   </body>
 </html>
