--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   <body>
     <h1>404 - Not Found. Looks like someone gave you wrong directions.</h1>
     <h2>
-      Don't worry. You can <a href="index.html">head back to our homepage</a>.
+      Don't worry. You can <a href="/">head back to our homepage</a>.
     </h2>
   </body>
 </html>
