--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>content</main>
 
     <footer>
-      <a href="about/index.html">About us</a>
+      <a href="/about">About us</a>
     </footer>
   </body>
 </html>
