feat(skeleton): Ready HTML

--- a/index.html
+++ b/index.html
@@ -18,19 +18,55 @@
   <body>
     <nav>
       <ul>
-        <li>
-          Get your queries solved:
-          <a href="tel:+91-998-167-7217">+91-998-167-7217</a>
+        <li class="logo">logo</li>
+        <ul class="main-links">
+          <li><a href="#">Grab an opportunity</a></li>
+          <li><a href="#">Post a Job (Employer)</a></li>
+        </ul>
+        <li class="quick-contact">
+          <a href="tel:+91-998-167-7217">
+            Have questions? talk to our founders: +91-998-167-7217
+          </a>
         </li>
-        <li><a href="#">Grab an opportunity</a></li>
-        <li><a href="#">Post a Job (Employer)</a></li>
       </ul>
     </nav>
 
-    <main>content</main>
+    <main>
+      <h1>
+        Businesses need People like you. So now it's your time to take an
+        inspiring step.
+      </h1>
+
+      <h2>Only 100% verified work opportunities</h2>
+      <section>
+        <p>
+          Stop competing with monkeys. Once you apply & we get to know your
+          interests, then we connect you directly to 100% verified local
+          businesses.
+        </p>
+        <a href="#">Apply for opportunities</a>
+      </section>
+
+      <h2>For businesses</h2>
+      <section>
+        <p>
+          Hiring platforms (yes Indeed) burdens you with a flood of resumes.
+          Countless hours get wasted in filtering resumes. Here, you get to
+          interview only the most capable among the crowd.
+        </p>
+        <a href="#">Submit opportunity (only for businesses)</a>
+      </section>
+
+      <img
+        class="hero-img"
+        src="assets/hero.png"
+        alt="people climbing the ladder of success"
+        srcset=""
+      />
+    </main>
 
     <footer>
-      <a href="/about">About us</a>
+      <a href="/about">about our team</a>
     </footer>
   </body>
 </html>
