--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-180685786-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-180685786-1");
+    </script>
   </head>
 
   <body>
@@ -58,7 +73,12 @@
           interests, then we connect you directly to 100% verified local
           businesses.
         </p>
-        <a href="#" class="btn btn-primary">Apply now</a>
+        <a
+          href="https://forms.gle/YrYktoynaMvKBA9u7"
+          target="_blank"
+          class="btn btn-primary"
+          >Apply now</a
+        >
       </section>
 
       <section class="card">
@@ -68,7 +88,12 @@
           Countless hours get wasted in filtering candidates. Here, you get to
           interview only the most capable among the crowd.
         </p>
-        <a href="#" class="btn btn-primary">Submit an opportunity</a>
+        <a
+          href="https://forms.gle/BjisVBNwuMYr5XFx5"
+          target="_blank"
+          class="btn btn-primary"
+          >Submit an opportunity</a
+        >
       </section>
     </main>
 
