--- a/about/index.html
+++ b/about/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
-    />
-    <title>InspireStep - Coming soon</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/main.css" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-180685786-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+  <title>InspireStep - Coming soon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/main.css" />
 
-      gtag("config", "UA-180685786-1");
-    </script>
-  </head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180685786-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  <body>
-    <nav>
-      <ul>
-        <li>
-          Get your queries solved:
-          <a href="tel:+91-998-167-7217">+91-998-167-7217</a>
-        </li>
-        <li>Grab an opportunity</li>
-        <li>Post a Job (Employer)</li>
-      </ul>
-    </nav>
-    <p>About us page</p>
-  </body>
+    gtag("config", "UA-180685786-1");
+  </script>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li>
+        Get your queries solved:
+        <a href="tel:+91-998-167-7217">+91-998-167-7217</a>
+      </li>
+      <li>Grab an opportunity</li>
+      <li>Post a Job (Employer)</li>
+    </ul>
+  </nav>
+  <p>About us page</p>
+</body>
+
 </html>
