--- a/index.html
+++ b/index.html
@@ -1,104 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
-    />
-    <title>InspireStep - Coming soon</title>
 
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/home.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-180685786-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+  <!-- Start Head -->
+  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-      gtag("config", "UA-180685786-1");
-    </script>
-  </head>
+  <title>InspireStep - Coming soon</title>
 
-  <body>
-    <nav>
-      <ul>
-        <li>
-          <img
-            src="assets/logo-full.png"
-            class="logo"
-            alt="InspireStep.com"
-            srcset=""
-          />
-        </li>
-        <ul class="main-links">
-          <li><a href="#">Grab an opportunity</a></li>
-          <li><a href="#">Post a Job (For Employers)</a></li>
-        </ul>
-        <li class="quick-contact">
-          <a href="tel:+91-998-167-7217">
-            Have questions? talk to our founders: +91-998-167-7217
-          </a>
-        </li>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <meta name="description"
+    content="We at InspireStep have promised ourselves to divert our nation from the roots of unemployment and give every deserving candidate a work-opportunity to earn money and help their families." />
+
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/home.css" />
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180685786-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-180685786-1");
+  </script>
+
+  <!-- End Head -->
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li>
+        <img src="assets/logo-full.png" class="logo" alt="InspireStep.com" srcset="" />
+      </li>
+      <ul class="main-links">
+        <li><a href="#">Grab an opportunity</a></li>
+        <li><a href="#">Post a Job (For Employers)</a></li>
       </ul>
-    </nav>
+      <li class="quick-contact">
+        <a href="tel:+91-998-167-7217">
+          Have questions? talk to our founders: +91-998-167-7217
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-    <main>
-      <img
-        class="hero-img"
-        src="assets/hero-illustration.png"
-        alt="People climbing the ladder of success"
-        srcset=""
-      />
-      <h1>
-        Businesses need People.<br />
-        Now it's your time to take an inspiring step.
-      </h1>
+  <main>
+    <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" srcset="" />
+    <h1>
+      Businesses need People.<br />
+      Now it's your time to take an inspiring step.
+    </h1>
 
-      <section class="card">
-        <h2>100% verified work opportunities</h2>
-        <p>
-          Stop competing with monkeys. Once you apply & we get to know your
-          interests, then we connect you directly to 100% verified local
-          businesses.
-        </p>
-        <a
-          href="https://forms.gle/YrYktoynaMvKBA9u7"
-          target="_blank"
-          class="btn btn-primary"
-          >Apply now</a
-        >
-      </section>
+    <section class="card">
+      <h2>100% verified work opportunities</h2>
+      <p>
+        Stop competing with monkeys. Once you apply & we get to know your
+        interests, then we connect you directly to 100% verified local
+        businesses.
+      </p>
+      <a href="https://forms.gle/YrYktoynaMvKBA9u7" target="_blank" class="btn btn-primary">Apply now</a>
+    </section>
 
-      <section class="card">
-        <h2>For businesses</h2>
-        <p>
-          Hiring platforms (yes Indeed) burdens you with a flood of resumes.
-          Countless hours get wasted in filtering candidates. Here, you get to
-          interview only the most capable among the crowd.
-        </p>
-        <a
-          href="https://forms.gle/BjisVBNwuMYr5XFx5"
-          target="_blank"
-          class="btn btn-primary"
-          >Submit an opportunity</a
-        >
-      </section>
-    </main>
+    <section class="card">
+      <h2>For businesses</h2>
+      <p>
+        Hiring platforms (yes Indeed) burdens you with a flood of resumes.
+        Countless hours get wasted in filtering candidates. Here, you get to
+        interview only the most capable among the crowd.
+      </p>
+      <a href="https://forms.gle/BjisVBNwuMYr5XFx5" target="_blank" class="btn btn-primary">Submit an opportunity</a>
+    </section>
+  </main>
 
-    <footer>
-      <p><a href="/about">about our team</a></p>
-    </footer>
-  </body>
+  <footer>
+    <p><a href="/about">about our team</a></p>
+  </footer>
+</body>
+
 </html>
