--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Start Head -->
-  
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
@@ -40,28 +40,36 @@
 
 <body>
   <nav>
-    <ul>
+    <ul class="logo-wrapper">
       <li>
-        <img src="assets/logo-full.png" class="logo" alt="InspireStep.com" srcset="" />
-      </li>
-      <ul class="main-links">
-        <li><a href="#">Grab an opportunity</a></li>
-        <li><a href="#">Post a Job (For Employers)</a></li>
-      </ul>
-      <li class="quick-contact">
-        <a href="tel:+91-998-167-7217">
-          Have questions? talk to our founders: +91-998-167-7217
+        <a href="/">
+          <img class="logo" src="assets/logo-full.png" alt="InspireStep.com" srcset="" />
         </a>
+      </li>
+    </ul>
+
+    <ul class="main-links">
+      <li><a href="#">Apply to Opportunities</a></li>
+      <li><a href="#">Post an Opportunity (Employers)</a></li>
+    </ul>
+
+    <ul class="quick-contact">
+      <li>
+        <a href="tel:+91-998-167-7217">
+          Questions?<br />
+          Talk to us: +91-998-167-7217 </a>
       </li>
     </ul>
   </nav>
 
   <main>
-    <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" srcset="" />
-    <h1>
+
+    <h1 class="hero-heading">
       Businesses need People.<br />
       Now it's your time to take an inspiring step.
     </h1>
+
+    <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" srcset="" />
 
     <section class="card">
       <h2>100% verified work opportunities</h2>
@@ -85,7 +93,8 @@
   </main>
 
   <footer>
-    <p><a href="/about">about our team</a></p>
+    <p><a href="/about">about our team</a> • <a href="/about">terms & privacy</a></p>
+    <p>© InspireStep.com</p>
   </footer>
 </body>
 
