feat: Desktop Ready

--- a/index.html
+++ b/index.html
@@ -63,38 +63,45 @@
   </nav>
 
   <main>
-
-    <h1 class="hero-heading">
-      Businesses need People.<br />
-      Now it's your time to take an inspiring step.
-    </h1>
+    <div class="hero-heading">
+      <h1>
+        Businesses need People.<br />
+        Now it's your time to take an Inspiring step.
+      </h1>
+    </div>
 
     <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" srcset="" />
 
-    <section class="card">
-      <h2>100% verified work opportunities</h2>
-      <p>
-        Stop competing with monkeys. Once you apply & we get to know your
-        interests, then we connect you directly to 100% verified local
-        businesses.
-      </p>
-      <a href="https://forms.gle/YrYktoynaMvKBA9u7" target="_blank" class="btn btn-primary">Apply now</a>
-    </section>
+    <section class="cta-cards-wrapper">
+      <article class="card">
+        <h2>For The People</h2>
+        <p>
+          Stop competing with monkeys.
+        </p>
+        <p>
+          Once you apply & we get to know your
+          interests, then we connect you directly to 100% verified local
+          businesses.
+        </p>
+        <a href="https://forms.gle/YrYktoynaMvKBA9u7" target="_blank" class="btn btn-primary">Apply now</a>
+      </article>
 
-    <section class="card">
-      <h2>For businesses</h2>
-      <p>
-        Hiring platforms (yes Indeed) burdens you with a flood of resumes.
-        Countless hours get wasted in filtering candidates. Here, you get to
-        interview only the most capable among the crowd.
-      </p>
-      <a href="https://forms.gle/BjisVBNwuMYr5XFx5" target="_blank" class="btn btn-primary">Submit an opportunity</a>
+      <article class="card">
+        <h2>For Businesses</h2>
+        <p>
+          Hiring platforms (yes Indeed) burdens you with a flood of resumes. Isn't it?
+        </p>
+        <p>
+          Countless hours get wasted in filtering candidates. Here, you get to
+          interview only the most capable among the crowd.
+        </p>
+        <a href="https://forms.gle/BjisVBNwuMYr5XFx5" target="_blank" class="btn btn-primary">Submit an opportunity</a>
+      </article>
     </section>
   </main>
 
   <footer>
-    <p><a href="/about">about our team</a> • <a href="/about">terms & privacy</a></p>
-    <p>© InspireStep.com</p>
+    <p><a href="/about">about our team</a> • <a href="/about">terms & privacy</a> • © InspireStep.com</p>
   </footer>
 </body>
 
