--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </ul>
 
     <ul class="main-links">
-      <li><a href="#">Apply to Opportunities</a></li>
-      <li><a href="#">Post an Opportunity (Employers)</a></li>
+      <li><a href="https://forms.gle/YrYktoynaMvKBA9u7">Apply to Opportunities</a></li>
+      <li><a href="https://forms.gle/BjisVBNwuMYr5XFx5">Post an Opportunity (Employers)</a></li>
     </ul>
 
     <ul class="quick-contact">
@@ -61,16 +61,15 @@
       </li>
     </ul>
   </nav>
-
+  
   <main>
     <div class="hero-heading">
       <h1>
         Businesses need People.<br />
         Now it's your time to take an Inspiring step.
       </h1>
+      <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" />
     </div>
-
-    <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" srcset="" />
 
     <section class="cta-cards-wrapper">
       <article class="card">
@@ -83,7 +82,7 @@
           interests, then we connect you directly to 100% verified local
           businesses.
         </p>
-        <a href="https://forms.gle/YrYktoynaMvKBA9u7" target="_blank" class="btn btn-primary">Apply now</a>
+        <a href="https://forms.gle/YrYktoynaMvKBA9u7" class="btn btn-primary">Apply now</a>
       </article>
 
       <article class="card">
@@ -95,13 +94,13 @@
           Countless hours get wasted in filtering candidates. Here, you get to
           interview only the most capable among the crowd.
         </p>
-        <a href="https://forms.gle/BjisVBNwuMYr5XFx5" target="_blank" class="btn btn-primary">Submit an opportunity</a>
+        <a href="https://forms.gle/BjisVBNwuMYr5XFx5" class="btn btn-primary">Submit an opportunity</a>
       </article>
     </section>
   </main>
 
   <footer>
-    <p><a href="/about">about our team</a> • <a href="/about">terms & privacy</a> • © InspireStep.com</p>
+    <p><a href="#">about our team</a> • <a href="#">terms & privacy</a> • © InspireStep.com</p>
   </footer>
 </body>
 
