fix: layout made simple
closes #3, closes #5

--- a/index.html
+++ b/index.html
@@ -39,36 +39,30 @@
 </head>
 
 <body>
-  <nav>
-    <ul class="logo-wrapper">
-      <li>
-        <a href="/">
-          <img class="logo" src="assets/logo-full.png" alt="InspireStep.com" srcset="" />
-        </a>
-      </li>
-    </ul>
 
-    <ul class="main-links">
-      <li><a href="https://forms.gle/YrYktoynaMvKBA9u7">Apply to Opportunities</a></li>
-      <li><a href="https://forms.gle/BjisVBNwuMYr5XFx5">Post an Opportunity (Employers)</a></li>
-    </ul>
+  <header class="nav-header">
+    <nav>
+      <ul>
+        <li>
+          <a href="/">
+            <img class="logo" src="assets/logo-full.png" alt="InspireStep.com" srcset="" />
+          </a>
+        </li>
+        <li>
+          <a href="tel:+91-998-167-7217">
+            Questions?<br />
+            Talk to us: +91-998-167-7217 </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <ul class="quick-contact">
-      <li>
-        <a href="tel:+91-998-167-7217">
-          Questions?<br />
-          Talk to us: +91-998-167-7217 </a>
-      </li>
-    </ul>
-  </nav>
-  
   <main>
     <div class="hero-heading">
       <h1>
         Businesses need People.<br />
         Now it's your time to take an Inspiring step.
       </h1>
-      <img class="hero-img" src="assets/hero-illustration.png" alt="People climbing the ladder of success" />
     </div>
 
     <section class="cta-cards-wrapper">
