--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <ul>
         <li>
           <a href="/">
-            <img class="logo" src="assets/logo-full.png" alt="InspireStep.com" srcset="" />
+            <img class="logo" src="assets/inspirestep-production-logo.png" alt="InspireStep.com" srcset="" />
           </a>
         </li>
         <li>
