feat: All Ready!

--- a/terms-and-privacy/index.html
+++ b/terms-and-privacy/index.html
@@ -18,7 +18,7 @@
     content="We at InspireStep have promised ourselves to divert our nation from the roots of unemployment and give every deserving candidate a work-opportunity to earn money and help their families." />
 
   <link rel="stylesheet" href="/css/main.css" />
-  <link rel="stylesheet" href="about.css" />
+  <link rel="stylesheet" href="terms-and-privacy.css" />
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
