--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-  <title>InspireStep - Coming soon</title>
+  <title>InspireStep</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
   <meta name="description"
     content="We at InspireStep have promised ourselves to divert our nation from the roots of unemployment and give every deserving candidate a work-opportunity to earn money and help their families." />
 
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/home.css" />
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
@@ -45,13 +45,13 @@
       <ul>
         <li>
           <a href="/">
-            <img class="logo" src="assets/inspirestep-production-logo.png" alt="InspireStep.com" srcset="" />
+            <img class="logo" src="/assets/inspirestep-production-logo.png" alt="InspireStep.com" />
           </a>
         </li>
         <li>
           <a href="tel:+91-998-167-7217">
-            Questions?<br />
-            Talk to us: +91-998-167-7217 </a>
+            Questions? <span>Talk to our founders: +91-998-167-7217</span>
+          </a>
         </li>
       </ul>
     </nav>
@@ -94,7 +94,7 @@
   </main>
 
   <footer>
-    <p><a href="#">about our team</a> • <a href="#">terms & privacy</a> • © InspireStep.com</p>
+    <p><a href="/about/">about our team</a> • <a href="/terms-and-privacy/">terms & privacy</a> • © InspireStep.com</p>
   </footer>
 </body>
 
