--- a/terms-and-privacy/index.html
+++ b/terms-and-privacy/index.html
@@ -18,7 +18,6 @@
     content="We at InspireStep have promised ourselves to divert our nation from the roots of unemployment and give every deserving candidate a work-opportunity to earn money and help their families." />
 
   <link rel="stylesheet" href="/css/main.css" />
-  <link rel="stylesheet" href="terms-and-privacy.css" />
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
@@ -58,8 +57,43 @@
   </header>
 
   <main>
-    <h1>Right now, we are working on this Page.</h1>
-    <h2><a href="/">You should go back to our homepage.</a></h2>
+    <h1>Terms and Privacy</h1>
+
+    <p>We believe in transparency when it comes to your data. We therefore put forward the terms and privacy statements
+      you should be aware of in a layman's language.</p>
+
+    <h2>Terms as an applicant / candidate</h2>
+
+    <p>When you sign up to our Google form as an applicant you need to accept the following terms: </p>
+
+    <ul>
+      <li>I (as an applicant / candidate) am aware that InspireStep is only a medium via which I might get work offers.
+        My selection for that work depends solely on me.</li>
+      <li>I (as an applicant / candidate) have no issues with InspireStep sharing my contact details & Resume with local
+        businesses and start-ups.
+      </li>
+    </ul>
+
+    <h2>Terms as an employer / businesses</h2>
+
+    <p>When you sign up to our Google form as an employer / business you need to accept the following terms: </p>
+
+    <ul>
+      <li>We InspireStep might share your company's contact details with the most capable candidates to
+        keep them in touch with your company.</li>
+      <li>The performance of the selected individual / candidate during the work period will be the sole responsibility
+        of the particpating company that is 'you'. InspireStep will have no role in matters related to work performance.
+      </li>
+    </ul>
+
+    <h2>User Privacy; applies to both applicants and employers</h2>
+    <p>We InspireStep take strict security measure to keep your data safe.
+      As of now we collect data via Google Forms. All the collected data is stored in our Google Account which has two
+      factor authentication enabled.
+      NO entity outside of InspireStep can get access to your data. It's safe!</p>
+
+    <p>If you have issues / queries related to our terms or privacy, you can email us at: <a
+        href="mailto:team@inspirestep.com">team@inspirestep.com</a>.</p>
   </main>
 
   <footer>
