feat: about page skeleton

--- a/about/index.html
+++ b/about/index.html
@@ -58,8 +58,45 @@
   </header>
 
   <main>
-    <h1>Right now, we are working on this Page.</h1>
-    <h2><a href="/">You should go back to our homepage.</a></h2>
+    <h1>Meet Our Team and Experience Our Values</h1>
+    <p>Our team makes us what we are. We are passionate beings trying to divert our nation from the roots of
+      unemployment. Let us introduce ourselves.</p>
+
+    <section class="team-wrapper">
+      <article class="member-card">
+        <img class="member-img" src="/assets/img/jophin.jpg" alt="Jophin Varughese sitting in a chair">
+        <h2 class="member-heading">Jophin Varughese</h2>
+        <h3>Co-founder</h3>
+        <div class="member-content">
+          <p>I am Jophin. During the lockdown period I realized that getting a freelance offer is
+            so hard that ultimately people were quitting. Others saw it as a huge struggle. I saw a big opportunity.
+          </p>
+          <p>And hence InspireStep was born with a vision to provide every deserving candidate a work-opportunity to
+            earn money and help their families.</p>
+          <p>My friends and relatives say that I'm a deal cracker. Thanks to my charming nature ;). I manage business
+            operations here at InspireStep.</p>
+          <p>I primarily deal with businesses. If you are a business / employer and need some help, you can get in touch
+            with me via phone: <a href="tel:+919669959194">+91
+              96699 59194</a></p>
+        </div>
+      </article>
+
+      <article class="member-card">
+        <img class="member-img" src="/assets/img/furqan.jpg" alt="Furqan Ahmed sitting in a chair">
+        <h2 class="member-heading">Furqan Ahmed</h2>
+        <h3>Co-founder</h3>
+        <div class="member-content">
+          <p>I was the first one to whom Jophin talked about the idea. I realized that the time was right to start this
+            noble venture.</p>
+          <p>From that day on, we haven't looked back. People say my calm nature gives me an edge in communicating with
+            students.</p>
+          <p>I believe in listening and being decessive when the time demands. So at InspireStep I take the executive
+            decisions and lead the students' relationships with the companies.</p>
+          <p>Here's my contact incase you have some queries related to InspireStep.com: <a href="tel:+919981677217">+91
+              99816 77217</a></p>
+        </div>
+      </article>
+    </section>
   </main>
 
   <footer>
