--- a/terms-and-privacy/index.html
+++ b/terms-and-privacy/index.html
@@ -62,7 +62,7 @@
     <p>We believe in transparency when it comes to your data. We therefore put forward the terms and privacy statements
       you should be aware of in a layman's language.</p>
 
-    <h2>Terms as an applicant / candidate</h2>
+    <h2>Terms as an Applicant / Candidate</h2>
 
     <p>When you sign up to our Google form as an applicant you need to accept the following terms: </p>
 
@@ -74,7 +74,7 @@
       </li>
     </ul>
 
-    <h2>Terms as an employer / businesses</h2>
+    <h2>Terms as an Employer / Business</h2>
 
     <p>When you sign up to our Google form as an employer / business you need to accept the following terms: </p>
 
@@ -86,7 +86,10 @@
       </li>
     </ul>
 
-    <h2>User Privacy; applies to both applicants and employers</h2>
+    <hr />
+
+    <h2>User Privacy</h2>
+    <p><strong>Note: The below privacy statement(s) applies to both applicants and employers.</strong></p>
     <p>We InspireStep take strict security measure to keep your data safe.
       As of now we collect data via Google Forms. All the collected data is stored in our Google Account which has two
       factor authentication enabled.
