--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
           </a>
         </li>
         <li>
-          <a href="tel:+91-998-167-7217">
-            Questions? <span>Talk to our founders: +91-998-167-7217</span>
-          </a>
+          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> or <a
+              href="tel:+919669959194">+91-96699-59194</a></span>
         </li>
       </ul>
     </nav>
