--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </a>
         </li>
         <li>
-          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> or <a
-              href="tel:+919669959194">+91-96699-59194</a></span>
+          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan) or <a
+              href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
       </ul>
     </nav>
