Minor nav fixes

--- a/about/index.html
+++ b/about/index.html
@@ -45,12 +45,12 @@
       <ul>
         <li>
           <a href="/">
-            <img class="logo" src="/assets/inspirestep-production-logo.png" alt="InspireStep.com" />
+            <img class="logo" src="/assets/logo-full.png" alt="InspireStep.com" />
           </a>
         </li>
         <li>
-          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan) or <a
-              href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
+          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan)</span> or
+          <span><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
       </ul>
     </nav>
@@ -63,11 +63,19 @@
 
     <section class="team-wrapper">
       <article class="member-card">
-        <img class="member-img" src="/assets/img/jophin.jpg" alt="Jophin Varughese sitting in a chair">
-        <h2 class="member-heading">Jophin Varughese</h2>
-        <h3>Co-founder</h3>
+        <div class="member-head">
+          <img class="member-img" src="/assets/img/jophin.jpg" alt="Jophin Varughese sitting in a chair">
+          <div class="intro">
+            <h2>Jophin Varughese</h2>
+            <h3>Co-founder</h3>
+            <p>I am Jophin. The deal cracker.</p>
+          </div>
+        </div>
+
+        <br />
+
         <div class="member-content">
-          <p>I am Jophin. During the lockdown period I realized that getting a freelance offer is
+          <p>During the lockdown period I realized that getting a freelance offer is
             so hard that ultimately people were quitting. Others saw it as a huge struggle. I saw a big opportunity.
           </p>
           <p>And hence InspireStep was born with a vision to provide every deserving candidate a work-opportunity to
@@ -81,11 +89,17 @@
       </article>
 
       <article class="member-card">
-        <img class="member-img" src="/assets/img/furqan.jpg" alt="Furqan Ahmed sitting in a chair">
-        <h2 class="member-heading">Furqan Ahmed</h2>
-        <h3>Co-founder</h3>
+        <div class="member-head">
+          <img class="member-img" src="/assets/img/furqan.jpg" alt="Furqan Ahmed sitting in a chair">
+          <span class="name">Furqan Ahmed</span>
+          <span class="what">Co-founder</span>
+          <span class="intro">I was the first one to whom Jophin talked about the idea.</span>
+        </div>
+
+        <br />
+
         <div class="member-content">
-          <p>I was the first one to whom Jophin talked about the idea. I realized that the time was right to start this
+          <p>As soon as I heard the Idea. It clicked. I realized that the time was right to start this
             noble venture.</p>
           <p>From that day on, we haven't looked back. People say my calm nature gives me an edge in communicating with
             students.</p>
