--- a/terms-and-privacy/index.html
+++ b/terms-and-privacy/index.html
@@ -44,12 +44,12 @@
       <ul>
         <li>
           <a href="/">
-            <img class="logo" src="/assets/inspirestep-production-logo.png" alt="InspireStep.com" />
+            <img class="logo" src="/assets/logo-full.png" alt="InspireStep.com" />
           </a>
         </li>
         <li>
-          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan) or <a
-              href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
+          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan)</span> or
+          <span><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
       </ul>
     </nav>
