--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img class="logo" src="/assets/logo-full.png" alt="InspireStep.com" />
           </a>
         </li>
-        <li>
+        <li class="contact">
           Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan)</span> or
           <span><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
